--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               }
               html , body {
                   height: 99.9%;
+/*                 font-family:Trebuchet MS (sans-serif); */
       /* margin: 0; */
       display: flex;
       flex-direction: column;
@@ -29,7 +30,7 @@
               .navbar {
                   background-color: rgb(24, 220, 24);
                   color: white;
-                  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+/*                   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
                    text-align: center;
                   height: 130px;
                   width: auto;
@@ -47,7 +48,7 @@
                   display: flex;
                   justify-content: center ;
                   gap: 30px;
-                  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/*                   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
                   font-weight: bold;
                   padding-top: 13px;
 
@@ -64,7 +65,7 @@
                   margin-left:20px;
                   margin-right: auto;
                   border-radius: 8px;
-                  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+/*                   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
                   border: 1px solid white;
                   box-shadow: 20px gray   ;
                   gap: 30px;
@@ -72,7 +73,7 @@
               }
 
               body{
-                  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/*                   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
                   background-color: #f2f2f2;
               }
               h2{
@@ -94,7 +95,7 @@
                   background-color: rgb(54, 53, 53);
                   color: white;
                   padding: 25px;
-                  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/*                   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
                    
                   marg
               }
